automation/orc-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: "orc"
spec:
  host: 
  to:
    kind: Service
    name: "orc"
